# scx

./: Cargo.toml  DEVELOPER_GUIDE.md  flake.nix
.github/actions/install-deps-action/: action.yml
.github/workflows/: build-kernel.nix  build-scheds.yml  caching-build.yml  flake.nix  update-kernels.py  update-kernels.yml
meson-scripts/: bpftool_build_skel  build_bpftool  build_libbpf  cargo_fetch  fetch_bpftool  fetch_libbpf  get_bpftool_ver  get_clang_ver  get_sys_incls  install_rust_user_scheds  test_sched
scheds/rust/scx_layered/: Cargo.toml
scheds/rust/scx_layered/src/: config.rs  layer_core_growth.rs  lib.rs  main.rs
scheds/rust/scx_layered/src/bpf/: cost.bpf.c  intf.h  main.bpf.c
tests/scx_integration_test_framework/: Cargo.toml
tests/scx_integration_test_framework/src/: builder.rs  lib.rs  main.rs  runner_common.rs  target_common.rs
tests/scx_layered_tests/: Cargo.toml  build.rs
tests/scx_layered_tests/src/: main.rs
tests/scx_layered_tests/tests/: integration.rs  layer_growth_random.toml
tools/scxtop/: Cargo.toml
tools/scxtop/src/: app.rs  cli.rs  config.rs  lib.rs  main.rs  perfetto_trace.rs
tools/scxtop/src/bpf/: intf.h  main.bpf.c
