[package]
name = "scx_integration_test_framework"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.1", features = ["derive", "env", "unicode", "wrap_help"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

scx_layered = { path = "../../scheds/rust/scx_layered" }
